@@ -564,8 +564,8 @@ app.get('/manage', (req, res) => {
     operation
   } = req.query;
   let docker_command = '';
-  let container = '';
   let command_log = '';
+  let container = '';
   const url = [];
   const what = [];
   const args = [];
@@ -2075,68 +2075,6 @@ app.get('/getconfig', (req, res) => {
   } else {
     res.send(config);
   }
-});
-
-app.get('/killvip', (req, res) => {
-  const check_token = req.query.token;
-  const url = [];
-  let command_log = '';
-
-  if ((check_token !== token) || (!check_token)) {
-    res.end('\nError: Invalid Credentials');
-  } else {
-    if (!config.vip) { // eslint-disable-line no-negated-condition,no-lonely-if
-      res.end('\nError: VIP not configured.');
-    } else {
-      Object.keys(config.vip).forEach((get_node, i) => {
-        Object.keys(config.vip[i]).forEach(key => {
-          const {
-            node
-          } = config.vip[i];
-
-          if ((!config.vip[i].hasOwnProperty(key) || key.indexOf('node') > -1)) {
-            return;
-          }
-          
-          const make_url = `${scheme}${node}:${agent_port}/killvip`;
-          url.push(make_url);
-        });
-      });
-
-      async.eachSeries(url, (url, cb) => {
-        const token_body = JSON.stringify({
-          token
-        });
-
-        const options = {
-          url,
-          rejectUnauthorized: ssl_self_signed,
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Content-Length': token_body.length
-          },
-          body: token_body
-        };
-
-        request(options, (err, body) => {
-          try {
-            const data = JSON.parse(body.body);
-            command_log += 'Node: ' + data.node + '\n\n' + data.output + '\n\n';
-            cb(err);
-          } catch (error) {
-            console.log(error);
-          }
-        });
-      }, err => {
-        if (err) {
-          console.log('\nError: ' + err);
-        }
-        res.end(command_log);
-      });
-    }
-  }
-  res.end('');
 });
 
 app.post('/elasticsearch', (req, res) => {
