@@ -148,9 +148,6 @@
 			$('#images-manage').click(function() {
 				$('#iframe_a').attr('src', '/images-manage.html');
 			});
-			$('#killvip').click(function() {
-				$('#iframe_a').attr('src', '/killvip.html');
-			});
 			$('#containers-manage').click(function() {
 				$('#iframe_a').attr('src', '/containers-manage.html');
 			});
@@ -282,7 +279,6 @@
 				<li id="nav_operations"><a onmouseover="this.click()" href="#!">Operations</a>
 					<ul class="dropdown">
 						<li><a href="#" id="config-edit">Edit Config</a></li>
-						<li><a href="#" id="killvip">Reset Virtual IP</a></li>
 						<li><a href="#" id="exec">Run Command(s)</a></li>
 						<li><a href="#" id="heartbeat">Heartbeat</a></li>
 						<li><a href="#" id="images-prune">Clean Docker</a></li>
